# python-web-development-project-52

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
task_manager/: settings.py  urls.py  views.py
task_manager/first_hello/: urls.py  views.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/templates/: base.html
task_manager/templates/first_hello/: index.html
task_manager/templates/main_page/: index.html
task_manager/templates/users/: users.html
task_manager/users/: urls.py  views.py
