[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = ""
authors = ["Max Odinokiy <max.odinokiy@gmail.com>"]
packages = [
    { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"

[tool.poetry.dev-dependencies]
gunicorn = "^20.1.0"
flake8 = "^5.0.4"
pytest = "^7.1.2"
dj-database-url = "^1.0.0"
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
